clusters/production/oscar/oscar-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oscar
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
