clusters/production/oscar/oscar-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oscar
  namespace: oscar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oscar
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oscar
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: oscar
        securityContext:
          allowPrivilegeEscalation: false
        image: ghcr.io/rogerrum/docker-oscar:1.7.1 # {"$imagepolicy": "flux-system:oscar"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: oscar-data
          mountPath: /config/Documents/OSCAR_Data
        - name: oscar-sdcard
          mountPath: /config/SDCARD
      volumes:
      - name: oscar-data
        persistentVolumeClaim:
          claimName: pvc-oscar-data
      - name: oscar-sdcard
        persistentVolumeClaim:
          claimName: pvc-oscar-sdcard
---
apiVersion: v1
kind: Service
metadata:
  name: oscar
  namespace: oscar
  labels:
    app: oscar
spec:
  selector:
    app: oscar
  ports:
  - name: oscar
    port: 3000
    targetPort: 3000
  type: ClusterIP
