clusters/production/oscar/oscar-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oscar
  namespace: oscar
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - oscar.rees.ca
  rules:
  - backendRefs:
    - name: oscar
      port: 3000
